--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # =========================
-# ? BASE DE DATOS (Railway)
+# BASE DE DATOS (Railway)
 # =========================
 spring.datasource.url=${MYSQL_URL}
 spring.datasource.username=${MYSQLUSER}
@@ -9,41 +9,41 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # =========================
-# ? Cloudinary
+# Cloudinary
 # =========================
 cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
 # =========================
-# ? Puerto del servidor
+# Puerto del servidor
 # =========================
 server.port=8080
 
 # =========================
-# ? BREVO (CORREO)
+# BREVO (CORREO)
 # =========================
 brevo.api.url=https://api.brevo.com/v3/smtp/email
 brevo.api.key=${BREVO_API_KEY}
 
 # =========================
-# ? JWT
+# JWT
 # =========================
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 # =========================
-# ? URL del FRONTEND
+# URL del FRONTEND
 # =========================
-app.frontend.reset-url=${APP_FRONTEND_RESET_URL}
+app.frontend.reset.url=${APP_FRONTEND_RESET_URL}
 
 # =========================
-# ? Configuración extra
+# Configuración extra
 # =========================
 server.forward-headers-strategy=framework
 
 # =========================
-# ? WHATSAPP CLOUD API (desactivado)
+# WHATSAPP CLOUD API (desactivado)
 # =========================
 whatsapp.api.url=none
 whatsapp.api.token=none
